fix: resolve header overlap on scrollbar and add slogan

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,20 +15,22 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body,
 html {
     height: 100%;
     margin: 0;
-    overflow-x: hidden;
 }
+ 
+
 #root{
     font-family: "Inter", sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-}
-
+    
+ }
 #root > div{
     
     flex-grow: 1;
@@ -64,7 +66,7 @@ body{
         z-index: 1000;
         top: 0;
         left: 0;
-        width: 100%;
+         width: 100%;
         padding: 0 20px;
         background-color: $beige;
        
@@ -97,6 +99,13 @@ body{
                     display: inline;
                 }
             }
+
+            .desktopLogo-container{
+                display: flex;
+                align-items:center ;
+                gap: 8px;
+            }
+
             .desktopLogo{
                 display: inline;
                 @media(max-width: $mobile){
@@ -223,7 +232,7 @@ body{
 
     .top10-header{
         text-align: center;
-        padding: 0 45x;
+        padding: 0 45px;
         height: 80px;
         margin: 40px 0;
         position: relative;
@@ -240,11 +249,11 @@ body{
             z-index: -1;
         }
         .left-lines{
-            left: -20px;
+             left: 3px;
             transform: rotate(180deg);
         }
         .right-lines{
-            right: -25px;
+            right: 2px;
         }
         h2{
             margin-bottom: 15px;
